Changelog
=========

4.7-dev - (unreleased)
----------------------

4.6 - (2012-06-12)
------------------
* Bug fix: fixed markup of HISTORY.txt file
  [ciobabog refs #5231]
* Feature: Warn user about changing data risks
  [voineali fixes #4973]
* Feature: Added @@data.info adapter for DavizVisualization content-type in order
  to easily get data source and data owner metadata
  [voineali refs #5072]

4.5 - (2012-04-26)
------------------
* Feature: Possibility to add data provenance/source information when one
  copy&paste data tables or upload them via QuickUpload Widget
  [voineali refs #5072]

4.4 - (2012-03-30)
------------------
* Feature: added documentation and links on how to examples and
  how prepare data for visualizations.
  [demarant #4995]
* Change: added default workflow mapping for daviz visualization.
  [demarant #5002]
  Upgrade step: if you have already been using daviz visualization
  you would need to migrate the instances to the new workflow states.
  Plone > Site setup > Types > choose Daviz Visualization and
  the new worklow to folder_workflow. Define the states mapping as
  you prefer.
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.daviz
* Feature: Updated Daviz Visualization fields help to provide examples and
  tutorials
  [voineali #4995]
* Change: do not show duplicates of sparql and json data when adding existing
  data. show only last version. Upgrade step (not needed for EEA production):
  ZMI > portal_setup > profile "EEA Daviz" > import Possible relations settings
  [demarant #5003]
* Feature: Refactoring to be able to use eea.googlecharts or eea.exhibit as
  standalone packages or as part of eea.daviz visualization bundle.
  [voineali #4996]

4.3 - (2012-03-05)
------------------
* Bug fix: restricted data sources relations to exhibit json or sparql queries.
  Upgrade step:
  ZMI > portal_setup > profile "EEA Daviz" > import Possible relations settings
  [demarant #4919]