@@ -123,13 +123,6 @@
     <property name="hidezerocount">0</property>
     <property name="default"></property>
    </criterion>
-   <criterion name="c6">
-    <property name="widget">lastversion</property>
-    <property name="title">only last version</property>
-    <property name="position">left</property>
-    <property name="section">default</property>
-    <property name="hidden">0</property>
-   </criterion>
   </criteria>
  </object>
   <object name="linked-open-data" meta_type="EEARelationsContentType">
@@ -184,13 +177,6 @@
     <property name="hidden">1</property>
     <property name="vocabulary"></property>
     <property name="default">effective(reverse)</property>
-   </criterion>
-   <criterion name="c5">
-    <property name="widget">lastversion</property>
-    <property name="title">only last version</property>
-    <property name="position">left</property>
-    <property name="section">default</property>
-    <property name="hidden">0</property>
    </criterion>
   </criteria>
  </object>
